--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
             <img src="imagens/Arvore.png" alt="Árvore" class="arvore">
             <img src="imagens/Celeiro.png" alt="Celeiro" class="celeiro">
             <div class="moinho-container">
-                <img src="imagens/Helice.png" alt="Hélice" class="helice">
+                <img src="imagens/helice_torre.png" alt="Hélice" class="helice">
                 <img src="imagens/Torre.png" alt="Torre" class="torre">
             </div>
             <img src="imagens/Trator.png" alt="Trator" class="trator">
